--- a/grrs/Cargo.toml
+++ b/grrs/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
+clap 	= { version = "4.0", features = ["derive"] }
+anyhow 	= { version = "1.0" }
+
+[dev-dependencies]
+assert_cmd = { version = "2.0.14" }
+predicates = { version = "3.1.0" }
